Decimate f-curves breaks curves in multiple segments. #72402

Closed
opened 2019-12-13 00:18:11 +01:00 by DenisPr · 9 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12

Blender Version
Broken: version: 2.82 (sub 4), branch: master, commit date: 2019-12-10 23:56, hash: 63d521432e
Worked: (optional)

Short description of error
When performing Decimate F-Curves, some of the curves are split into multiple segments, looks like when the curve has very small values.
snapshot.png

Exact steps for others to reproduce the error
In the file attached below, in Graph Editor, Key menu, select Decimate(Ratio).

fcurvesDecimateBug.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce RTX 2080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.12 **Blender Version** Broken: version: 2.82 (sub 4), branch: master, commit date: 2019-12-10 23:56, hash: `63d521432e` Worked: (optional) **Short description of error** When performing Decimate F-Curves, some of the curves are split into multiple segments, looks like when the curve has very small values. ![snapshot.png](https://archive.blender.org/developer/F8214323/snapshot.png) **Exact steps for others to reproduce the error** In the file attached below, in Graph Editor, Key menu, select Decimate(Ratio). [fcurvesDecimateBug.blend](https://archive.blender.org/developer/F8214228/fcurvesDecimateBug.blend)
Author

Added subscriber: @Kinetica

Added subscriber: @Kinetica

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This F-Curve has nan values which should not happen.
Perhaps this is a error in importers/exporters.
We must first understand how you got such a file.

This F-Curve has `nan` values which should not happen. Perhaps this is a error in importers/exporters. We must first understand how you got such a file.
Author

I use sensors input for each bone and insert rotation keyframes on playback. There are communication errors with the sensors that have nan values, but they are replaced automatically with previous frame rotations before the keyframe is inserted.

I use sensors input for each bone and insert rotation keyframes on playback. There are communication errors with the sensors that have nan values, but they are replaced automatically with previous frame rotations before the keyframe is inserted.

I'll check again.

I'll check again.
Campbell Barton was assigned by Germano Cavalcante 2019-12-20 14:57:34 +01:00

The problem occurs because fabs(dot_vnvn(tan_r, a- [x], dims)) returns 0.0 on this line:
https://developer.blender.org/diffusion/B/browse/master/extern/curve_fit_nd/intern/curve_fit_cubic.c$615

This results in inf and subsequent nan.
Original code added in 2033f47e.

The problem occurs because `fabs(dot_vnvn(tan_r, a- [x], dims))` returns `0.0` on this line: https://developer.blender.org/diffusion/B/browse/master/extern/curve_fit_nd/intern/curve_fit_cubic.c$615 This results in `inf` and subsequent `nan`. Original code added in 2033f47e.
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 13:40:18 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This issue was referenced by af2be110c3

This issue was referenced by af2be110c31e9cd71a07fbea516c6bf14fa26179

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2019-12-24 02:34:34 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72402
No description provided.