Fix T72402: Decimate f-curves fails with co-linear key-frames